team updates to proposal

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -36,20 +36,17 @@
    "source": [
     "# Names\n",
     "\n",
-    "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
-    "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Katie Chung\n",
+    "- Jiawei Gao\n",
+    "- Grace Ortiz\n",
+    "- Hsiang-An Pao"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Abstract \n",
+    "# Abstract - Jiawei\n",
     "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
     "- what your goal/problem is\n",
     "- what the data used represents and how they are measured\n",
@@ -62,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background\n",
+    "# Background - Jiawei\n",
     "\n",
     "Fill in the background and discuss the kind of prior work that has gone on in this research area here. **Use inline citation** to specify which references support which statements.  You can do that through HTML footnotes (demonstrated here). I used to reccommend Markdown footnotes (google is your friend) because they are simpler but recently I have had some problems with them working for me whereas HTML ones always work so far. So use the method that works for you, but do use inline citations.\n",
     "\n",
@@ -75,16 +72,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem Statement\n",
+    "# Problem Statement - Katie\n",
     "\n",
-    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once)."
+    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once).\n",
+    "\n",
+    "Want to figure out the model that acheives the best score according to multiple metrics for self-driving car simulations via Carla. \n",
+    "Define metrics:\n",
+    "- safety\n",
+    "- minimize collisions/avoid obstacles\n",
+    "- staying wthin lane\n",
+    "- following traffic signals\n",
+    "- getting to correct destination in a timely manner\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data\n",
+    "# Data - Grace\n",
     "\n",
     "You should have a strong idea of what dataset(s) will be used to accomplish this project. \n",
     "\n",
@@ -102,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Proposed Solution\n",
+    "# Proposed Solution - Hsiang-An\n",
     "\n",
     "In this section, clearly describe a solution to the problem. The solution should be applicable to the project domain and appropriate for the dataset(s) or input(s) given. Provide enough detail (e.g., algorithmic description and/or theoretical properties) to convince us that your solution is applicable. Why might your solution work? Make sure to describe how the solution will be tested.  \n",
     "\n",
@@ -115,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation Metrics\n",
+    "# Evaluation Metrics - Katie\n",
     "\n",
     "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
    ]
@@ -124,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ethics & Privacy"
+    "# Ethics & Privacy - Hsiang-An"
    ]
   },
   {
@@ -149,18 +155,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put things here that cement how you will interact/communicate as a team, how you will handle conflict and difficulty, how you will handle making decisions and setting goals/schedule, how much work you expect from each other, how you will handle deadlines, etc...\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "\n",
+    "* Meet once a week via Zoom, more as needed closer to the end of the quarter\n",
+    "* Respond in group chat within 12 hours\n",
+    "* Conflict resolved by majority, any conflicts should be brought up within group before seeking TA assistance \n",
+    "* Work should be divided evenly to the best of the group's ability\n",
+    "* Be awafre of deadlines, each member's portion of work should be completed at least a couple hours prior to deadline to allow for revision \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Timeline Proposal"
+    "# Project Timeline Proposal - Hsiang-An"
    ]
   },
   {
