Updated problem statement

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -74,16 +74,20 @@
    "source": [
     "# Problem Statement - Katie\n",
     "\n",
-    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once).\n",
+    "*Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once).*\n",
     "\n",
-    "Want to figure out the model that acheives the best score according to multiple metrics for self-driving car simulations via Carla. \n",
-    "Define metrics:\n",
-    "- safety\n",
-    "- minimize collisions/avoid obstacles\n",
-    "- staying wthin lane\n",
-    "- following traffic signals\n",
-    "- getting to correct destination in a timely manner\n",
-    "\n"
+    "Autonomous driving systems must make real-time decisions in dynamic environments while balancing safety, efficiency, and adherence to traffic rules. Traditional rule-based approaches struggle to generalize across diverse driving conditions, thus reinforcement learning (RL) is a promising alternative for self-driving applications. However, training RL models to drive safely and effectively remains a significant challenge due to the need for reliable evaluation metrics and the complexity of real-world driving scenarios.\n",
+    "\n",
+    "In this project, we aim to develop and compare reinforcement learning models for self-driving car simulations using CARLA. Our goal is to identify the model that achieves the highest overall performance across multiple key metrics, including:\n",
+    "\n",
+    "- Safety: Minimizing collisions with obstacles, pedestrians, and other vehicles.\n",
+    "- Lane Adherence: Ensuring the vehicle stays within lane boundaries and follows lane discipline.\n",
+    "- Traffic Rule Compliance: Obeying traffic lights, stop signs, and yielding rules.\n",
+    "- Efficiency: Reaching the intended destination within a reasonable time frame while maintaining safe driving behavior.\n",
+    "\n",
+    "The vehicle's actions can be evaluated using numerical metrics such as collision count, lane deviation, and time to destination. Additionally, each episode in the CARLA simulation can be analyzed for performance using well-defined criteria. This is also replicable, as the experiment can be conducted multiple times with different RL models and configurations to assess their effectiveness under various driving conditions.\n",
+    "\n",
+    "Through this project, we seek to determine which RL algorithm and model architecture yield the best trade-off between safety, rule adherence, and efficiency, contributing to the broader field of autonomous vehicle research."
    ]
   },
   {
