updated Evaluation Metrics

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -80,10 +80,10 @@
     "\n",
     "In this project, we aim to develop and compare reinforcement learning models for self-driving car simulations using CARLA. Our goal is to identify the model that achieves the highest overall performance across multiple key metrics, including:\n",
     "\n",
-    "- Safety: Minimizing collisions with obstacles, pedestrians, and other vehicles.\n",
-    "- Lane Adherence: Ensuring the vehicle stays within lane boundaries and follows lane discipline.\n",
-    "- Traffic Rule Compliance: Obeying traffic lights, stop signs, and yielding rules.\n",
-    "- Efficiency: Reaching the intended destination within a reasonable time frame while maintaining safe driving behavior.\n",
+    "- Safety: Minimizing collisions with obstacles, pedestrians, and other vehicles\n",
+    "- Lane Adherence: Ensuring the vehicle stays within lane boundaries and follows lane discipline\n",
+    "- Traffic Rule Compliance: Obeying traffic lights, stop signs, and yielding rules\n",
+    "- Efficiency: Reaching the intended destination within a reasonable time frame while maintaining safe driving behavior\n",
     "\n",
     "The vehicle's actions can be evaluated using numerical metrics such as collision count, lane deviation, and time to destination. Additionally, each episode in the CARLA simulation can be analyzed for performance using well-defined criteria. This is also replicable, as the experiment can be conducted multiple times with different RL models and configurations to assess their effectiveness under various driving conditions.\n",
     "\n",
@@ -127,7 +127,68 @@
    "source": [
     "# Evaluation Metrics - Katie\n",
     "\n",
-    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
+    "*Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms).*\n",
+    "\n",
+    "In this project, we evaluate the performance of both the **benchmark model** and the **solution model** using key safety and efficiency metrics. These metrics ensure that the self-driving agent follows safe driving behavior while effectively navigating to its destination.\n",
+    "\n",
+    "#### **1. Collision Rate (Safety)**\n",
+    "**Definition:** Measures the frequency of collisions per episode.  \n",
+    "- Lower values indicate better performance in avoiding obstacles and other vehicles.  \n",
+    "- Derived from the number of collisions detected during the simulation.  \n",
+    "\n",
+    "**Mathematical Representation:**  \n",
+    "$$\n",
+    "\\text{Collision Rate} = \\frac{\\text{Total Collisions}}{\\text{Total Episodes}}\n",
+    "$$\n",
+    "Where:  \n",
+    "- **Total Collisions** is the number of times the agent collides with an object\n",
+    "- **Total Episodes** is the number of completed simulation runs\n",
+    "\n",
+    "**Example Interpretation:**  \n",
+    "- If the agent crashes 10 times in 50 episodes, the collision rate is 0.2 (or 20%)  \n",
+    "- A safer model should minimize this rate\n",
+    "\n",
+    "#### **2. Lane Adherence (Safety & Rule Compliance)**\n",
+    "**Definition:** Measures how well the vehicle stays within lane boundaries  \n",
+    "- Calculated as the deviation from the center of the assigned lane over time\n",
+    "\n",
+    "**Mathematical Representation:**  \n",
+    "$$\n",
+    "\\text{Lane Deviation} = \\frac{1}{T} \\sum_{t=1}^{T} |d_t|\n",
+    "$$\n",
+    "Where:  \n",
+    "- \\( d_t \\) is the lateral distance from the lane center at time \\( t \\)\n",
+    "- \\( T \\) is the total number of time steps in an episode\n",
+    "\n",
+    "**Example Interpretation:**  \n",
+    "- A **higher deviation** means the vehicle frequently strays out of its lane\n",
+    "- The goal is to **minimize lane deviation** for better lane-keeping performance\n",
+    "\n",
+    "#### **3. Traffic Rule Compliance (Safety & Legal Adherence)**\n",
+    "**Definition:** Tracks the number of violations related to red lights, stop signs, and illegal lane changes\n",
+    "- Lower values indicate better adherence to traffic laws\n",
+    "\n",
+    "**Mathematical Representation:**  \n",
+    "$$\n",
+    "\\text{Violation Rate} = \\frac{\\text{Total Violations}}{\\text{Total Episodes}}\n",
+    "$$\n",
+    "\n",
+    "**Example Interpretation:**  \n",
+    "- If a model runs 100 episodes and violates traffic rules 15 times, the violation rate is 0.15 (or 15%)\n",
+    "- A safer model will have a near-zero violation rate\n",
+    "\n",
+    "#### **4. Time to Destination (Efficiency)**\n",
+    "**Definition:** Measures the time taken to successfully reach the goal\n",
+    "- A balance is needed: the car should not drive recklessly fast but also should not drive too slowly\n",
+    "\n",
+    "**Mathematical Representation:**  \n",
+    "$$\n",
+    "\\text{Time Efficiency} = \\frac{\\text{Total Distance Traveled}}{\\text{Total Time Taken}}\n",
+    "$$\n",
+    "\n",
+    "**Example Interpretation:**  \n",
+    "- If an agent takes 100 seconds to reach a 500m destination, its speed efficiency score is 5 m/s\n",
+    "- A good model should balance speed while following safety rules\n"
    ]
   },
   {
