--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -38,11 +38,10 @@
     "\n",
     "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
     "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Sam Dimmock\n",
+    "- Vincent Gao\n",
+    "- Owen Guan\n",
+    "- Ryota Takemura\n"
    ]
   },
   {
@@ -108,7 +107,22 @@
     "\n",
     "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
     "\n",
-    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
+    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. \n",
+    "\n",
+    "To implement our solution, we plan to use Monte Carlo methods to help train an AI to play the simplified version of Mahjong. First, we have to program this simplified version of the game. As stated in the problem statement, the objective of this game is to have a total of 4 straights or three of a kind and one pair. Each state will consist of the current hand of 13 tiles, what the opponents has tossed, and what tile has been drawn. The actions one can take is chi, pung, drawing a tile, discarding a tile, or nothing. The AI can only chi a tile if it's tossed by the player before it. The AI must draw a tile on it's turn. The AI can only discard a tile if they just drew a tile, chi, or pung. The AI can only do nothing if an opponent tossed out a tile that can't be chi or pung. The values for each action will be shown below: \n",
+    "\n",
+    "| **Action**        | **Reward** |\n",
+    "|-------------------|------------|\n",
+    "| **Pung or Chi**   | +0.1       |\n",
+    "| **Draw, Discard, Nothing** | +0         |\n",
+    "| **Win**           | +1         |\n",
+    "| **Lose**          | -1         |\n",
+    "\n",
+    "The policy we will start with is to always pung or chi if possible and to discard tiles that are not a pair or within two of any tile of the same suit. \n",
+    "\n",
+    "We believe this solution will work because this game contains a lot of uncertainty and variability, making a complete model near impossible. This rules out any model-based reinforcement learning and dynamic programming. Instead, by playing the game hundreds of thousands of times, we can get closer and closer to an optimal policy to this simplified version of Mahjong. This is because as the number of simulations approaches infinity, the optimal policy gets closer and closer. \n",
+    "\n",
+    "The solution will be tested against a benchmark model that functions on randomness. Every action that is avaliable for them to do will be chosen randomly and the tile it discards will also be randomly chosen. "
    ]
   },
   {
@@ -117,7 +131,17 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
+    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms).\n",
+    "\n",
+    "The evaluation we will use is win rate. The objective of Mahjong is to win, so having a higher winner rate means the model is doing better than it's opponents. The way win rate will be calculated will be the total number of wins a model has divided by the total number of games played. \n",
+    "\n",
+    "\n",
+    "$$Win Rate = \\Large\\frac{N_{win}}{N_{total}}$$\n",
+    " \n",
+    "Where:  \n",
+    "- $N_{win}$ = Number of games won  \n",
+    "- $N_{total}$= Total number of games played  \n",
+    "\n"
    ]
   },
   {
@@ -171,13 +195,12 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic (Pelé) | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets (Beckenbaur)  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data ,do some EDA (Maradonna) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin programming for project (Cruyff) | Discuss/edit project code; Complete project |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Carlos)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project  |"
+    "| 2/11  |  7 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 2/18  |  7 PM |  A clear idea of what and how we will approach the programming of this project | Discuss and finalize the policy that the Monte Carlo method will follow | \n",
+    "| 2/25  | 7 PM  |  Mahjong should be fully coded and ready for simulations | Begin coding the Monte Carlo methods   |\n",
+    "| 3/4  | 7 PM  | Monte Carlo methods and begin simulations | Finalizing all the written stuff for the project   |\n",
+    "| 3/11  | 7 PM  | Write conclusions and edit | Finalize the project and make any edits |\n",
+    "| 3/17  | Before 11:59 PM  | N/A | Turn in Final Project  |"
    ]
   },
   {
