Ethnics and timeline update

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -202,11 +202,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your project has obvious potential concerns with ethics or data privacy discuss that here.  Almost every ML project put into production can have ethical implications if you use your imagination. Use your imagination. Get creative!\n",
+    "Ethical concerns in this project are complex, with safety being a primary consideration. Self-driving vehicles rely on ML models to interpret their surroundings and make real-time decisions, but these models may encounter unpredictable scenarios that lead to accidents. Unlike human drivers, AI systems lack personal accountability, making it difficult to determine who is responsible when failures occur. Questions of liability (manufacturer, software engineers, or the vehicle owner) will become even more complicated if our model contributes to such issues. Another ethical dilemma arises in unavoidable accident scenarios, where the system may need to choose between different harmful outcomes. Should the vehicle prioritize the safety of its passengers over pedestrians or other drivers? This challenge highlights the difficulty engineers face in programming and defining ethical guidelines.\n",
     "\n",
-    "Even if you can't come up with an obvious ethical concern that should be addressed, you should know that a large number of ML projects that go into producation have unintended consequences and ethical problems once in production. How will your team address these issues?\n",
+    "Bias in machine learning models is another important consideration, as training data may not always represent the full diversity of real-world driving conditions. If the dataset lacks a wide range of pedestrian appearances or road environments, the AI may struggle to make fair and accurate decisions. Without comprehensive testing across diverse environments, the system could unintentionally discriminate against certain groups, leading to unsafe or unfair outcomes.\n",
     "\n",
-    "Consider a tool to help you address the potential issues such as https://deon.drivendata.org"
+    "Privacy is also a key concern, as self-driving vehicles collect vast amounts of data, including location, passenger behavior, and license plate information. While this data is essential for improving AI performance, it also poses risks related to surveillance. If not properly anonymized, it could lead to privacy violations. To avoid this, we will apply anonymization techniques such as blurring identifiable features to ensure data privacy.\n"
    ]
   },
   {
@@ -239,17 +239,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Replace this with something meaningful that is appropriate for your needs. It doesn't have to be something that fits this format.  It doesn't have to be set in stone... \"no battle plan survives contact with the enemy\". But you need a battle plan nonetheless, and you need to keep it updated so you understand what you are trying to accomplish, who's responsible for what, and what the expected due dates are for each item.\n",
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic (Pelé) | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets (Beckenbaur)  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data ,do some EDA (Maradonna) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin programming for project (Cruyff) | Discuss/edit project code; Complete project |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Carlos)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project  |"
+    "| 2/12  |  5 PM |  Brainstorm topics/questions and split parts for research (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 2/14  |  12 PM |  Finalize Project Proposal (all), Search for datasets (Jiawei) | Complete background, Discuss datasets and metrics, finalize questions, Turn in proposal | \n",
+    "| 2/21  | 5 PM  | Import and Wrangle Data (Hsiang-An), EDA (Grace)  | Discuss and finalize datasets and metrics for EDA, Review if work is divided in meaningful manner   |\n",
+    "| 2/28  |  5 PM  | Finalize data, Continue on EDA (Grace), Programming start for RL (Katie) | Review if EDA and data wrangling is completed, Discuss possible algorithm, validations, model selection |\n",
+    "| 3/5  | 6 PM  | Finalize EDA, continue programming (Katie), Start Analysis (Jiawei, Hsiang-An) | Review project code, Analyze algorithms and model performance, Split work based on what’s lacking |\n",
+    "| 3/12  | 12 PM  | Complete Analysis ; Start results/conclusion/discussion (Grace, Katie)| Discuss and complete project, Plan for extra meeting if needed |\n",
+    "| 3/16  | 5 PM  | Complete and Edit project (all)| Discuss and review report |\n",
+    "| 3/19  | Before 11:59 PM  | Finalize project (all) | Turn in Final Project  |"
    ]
   },
   {
