adding data section

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -96,16 +96,45 @@
    "source": [
     "# Data - Grace\n",
     "\n",
-    "You should have a strong idea of what dataset(s) will be used to accomplish this project. \n",
+    "*You should have a strong idea of what dataset(s) will be used to accomplish this project.* \n",
     "\n",
-    "If you know what (some) of the data you will use, please give the following information for each dataset:\n",
-    "- link/reference to obtain it\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "- what an observation consists of\n",
-    "- what some critical variables are, how they are represented\n",
-    "- any special handling, transformations, cleaning, etc will be needed\n",
+    "*If you know what (some) of the data you will use, please give the following information for each dataset:*\n",
+    "*- link/reference to obtain it*\n",
+    "*- description of the size of the dataset (# of variables, # of observations)*\n",
+    "*- what an observation consists of*\n",
+    "*- what some critical variables are, how they are represented*\n",
+    "*- any special handling, transformations, cleaning, etc will be needed*\n",
     "\n",
-    "If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets."
+    "*If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[2]</sup>](#webots_sensors_note):\n",
+    "- **RGB image frames**: 1D byte array \n",
+    "- **Point cloud distance data (LiDAR)**: 1D float array\n",
+    "- **Proximity sensor data**: Float\n",
+    "- **GPS coordinates**: 3D float array\n",
+    "- **Acceleration**: 3D float array\n",
+    "- **Angular velocity**: 3D float array\n",
+    "- **Cardinal direction**: 3D float array\n",
+    "- **Wheel rotation**: Float (in radians) \n",
+    "- Control commands <a name=\"webots_carlib\"></a>[<sup>[3]</sup>](#webots_carlib_note)\n",
+    "    - **Steering**: Float (in radians)\n",
+    "    - **Throttle**: Float ([0, max_speed])\n",
+    "    - **Braking**: Float ([0, 1])\n",
+    "- **Time step**: Float\n",
+    "\n",
+    "To ensure the vehicle's safety, lane adherance, and traffic rule compliance the most critical variables are:\n",
+    "- RGB image frames for detecting pedestrains, other vehicles, traffic signs/signals, and lanes\n",
+    "- Point cloud distance data for determining following distance and preventing collisions\n",
+    "- Proximity sensor data for accurate close range obstacle and collision detection\n",
+    "\n",
+    "To ensure the vehicle's efficiency the most critical variables are time step and GPS coordinates to minimize drive time verify the correct final destination. \n",
+    "\n",
+    "Webots by default runs at 32ms per time step, meaning approximately 31 observations will be recorded per 1 second of simulation time. Observations will be stored as NumPy arrays for optimal reinforcement learning training. To ensure consistency and prevent feature bias, the sensor data will be preprocessed. All sensor readings will be normalized to a common scale to improve stability and convergence speed. In addition, RGB images that are returned from as 1D arrays will be reshaped into 3D arrays (height x width x channels) and pixel values will be normalized. GPS coordinates will be converted from abosolute to relative positioning to simplify state representation. Lastly, null values returned by LiDAR sensors will be replaced with the maximum range of the sensor. "
    ]
   },
   {
@@ -258,8 +287,9 @@
    "source": [
     "# Footnotes\n",
     "<a name=\"lorenznote\"></a>1.[^](#lorenz): Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html<br> \n",
-    "<a name=\"admonishnote\"></a>2.[^](#admonish): Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.<br>\n",
-    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem\n"
+    "<a name=\"webots_sensors_note\"></a>2.[^](#webots_sensors): Cyberbotics API Reference: doc. https://cyberbotics.com/doc/reference/nodes-and-api-functions?tab-language=python  \n",
+    "<a name=\"webots_carlib_note\"></a>3.[^](#webots_carlib): Cyberbotics Car & Driver Library Reference: doc. https://cyberbotics.com/doc/automobile/car-and-driver-libraries \n",
+    "\n"
    ]
   },
   {
