ethnic update + idea for solution

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -143,11 +143,36 @@
    "source": [
     "# Proposed Solution - Hsiang-An\n",
     "\n",
-    "In this section, clearly describe a solution to the problem. The solution should be applicable to the project domain and appropriate for the dataset(s) or input(s) given. Provide enough detail (e.g., algorithmic description and/or theoretical properties) to convince us that your solution is applicable. Why might your solution work? Make sure to describe how the solution will be tested.  \n",
+    "The proposed solution combines **Reinforcement Learning (RL)** and **Convolutional Neural Networks (CNNs)** to develop a self-driving car system in a simulated environment created using **Webots**. The system learns to navigate autonomously by processing visual inputs from a front-facing camera and optimizing driving policies through trial and error.\n",
     "\n",
-    "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
+    "# **Model**\n",
+    "- **Webots** provides a realistic simulation environment with customizable tracks and driving scenarios. The car is equipped with a front-facing camera to capture visual input, simulating real-world driving conditions.\n",
+    "- A **CNN** processes raw image data to extract meaningful features (e.g., lane markings, obstacles, traffic signs).\n",
+    "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent.\n",
+    "- The RL agent may use **Proximal Policy Optimization (PPO)** to learn an optimal driving policy.\n",
+    "- The state space consists of CNN-extracted features, and the action space includes controls like steering, throttle, and brake.\n",
+    "- Includes reward fuctions that gives positive rewards for staying within lanes and maintaining safe speeds, negative rewards for collisions, going off-road, or violating traffic rules.\n",
     "\n",
-    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
+    "# **Training Pipeline**\n",
+    "1. The car collects image data from the Webots environment.\n",
+    "2. The CNN processes the images and extracts features.\n",
+    "3. The RL agent selects actions based on the features and receives rewards.\n",
+    "4. The agent updates its policy iteratively using collected experiences.\n",
+    "\n",
+    "# **Testing and Evaluation**\n",
+    "- The trained model is tested on unseen tracks or scenarios to evaluate generalization.\n",
+    "- Evalutaion metrics are listed below \n",
+    "- A **rule-based controller** serves as the **benchmark**. It follows predefined rules (e.g., stay in the center of the lane, stop at obstacles) without learning capabilities.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Why This Solution Works\n",
+    "\n",
+    "- CNNs excel at processing image data and have been successfully used in autonomous driving tasks like lane detection and object recognition. By extracting meaningful features from raw images, the CNN enables the RL agent to interpret complex visual inputs effectively.\n",
+    "- RL allows the agent to learn optimal policies through trial and error, making it well-suited for dynamic and unpredictable driving scenarios. The reward-based learning process ensures the agent improves over time by maximizing safe and efficient driving behaviors.\n",
+    "- Webots provides a realistic and customizable environment for training and testing, enabling the simulation of diverse driving scenarios. The simulator's integration with PyTorch ensures a seamless and reproducible implementation.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -235,7 +260,7 @@
     "\n",
     "Bias in machine learning models is another important consideration, as training data may not always represent the full diversity of real-world driving conditions. If the dataset lacks a wide range of pedestrian appearances or road environments, the AI may struggle to make fair and accurate decisions. Without comprehensive testing across diverse environments, the system could unintentionally discriminate against certain groups, leading to unsafe or unfair outcomes.\n",
     "\n",
-    "Privacy is also a key concern, as self-driving vehicles collect vast amounts of data, including location, passenger behavior, and license plate information. While this data is essential for improving AI performance, it also poses risks related to surveillance. If not properly anonymized, it could lead to privacy violations. To avoid this, we will apply anonymization techniques such as blurring identifiable features to ensure data privacy.\n"
+    "Privacy is also a key concern, as self-driving vehicles collect vast amounts of data, including location, passenger behavior, to even personal/veicle information. We would make sure to include data that has been anonymized so that the data is essential for improving AI performance, but is not at risk of privacy leaks.\n"
    ]
   },
   {
